[Delivers  #161698120] add orders.html and orders.css files

--- a/UI/orders.html
+++ b/UI/orders.html
@@ -28,8 +28,8 @@
         
         </div>
         <div class="content1">
-          <div class="title">Burgers - <span class="price">35,000 UGX</span> </div>
-          <div class="title">Burgers - <span class="price">35,000 UGX</span> </div>
+          <div class="pickup">pickup location --<span class="price">35,000 UGX</span> </div>
+          <div class="Fullname">Fullname -- <span class="price">35,000 UGX</span> </div>
           <div class="title">Burgers - <span class="price">35,000 UGX</span> </div>
           <div class="title">Burgers - <span class="price">35,000 UGX</span> </div>
           <div class="title">Burgers - <span class="price">35,000 UGX</span> </div>
