[Delivers #161746675] add adminIn and adminSignUp html pages

--- a/UI/admin/adminIn.html
+++ b/UI/admin/adminIn.html
@@ -14,6 +14,7 @@
 <div class="topnav">
 <h1>SIT</h1>
 <a class="active" href="#Admin">Admin</a>
+<a href="../index.html">user login</a>
 </div>
 
 
@@ -24,7 +25,7 @@
                 <h1>sendIT</h1>
                     <p>Admin</P>
                         </div>
-                            <form action="All_orders.html" class="login-form">
+                            <form action="admin_orders.html" class="login-form">
                             <input type="email" placeholder="email" required/>
                             <input type="password" placeholder="password" required/>
                             <button type="submit" class="button">login</button>
