[Delivers #161696205] update user sign and signup pages

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>fAST FOODS</title>
+<title>sendIT</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <meta charset="utf-8"> 
 <META name="keywords" lang="en-us" content="fast FOODS">
@@ -10,10 +10,8 @@
 <body>
 
 <div class="topnav">
-<h1>sIT</h1>
-<a href="contact.html">ContactUs</a>
-<a href="admin/Admin-In.html">Admin</a>
-<a class="active" href="#home">Home</a>
+<h1>SIT</h1>
+<a class="active" href="#home">SignUp</a>
 </div>
 
 <div class="main-content">
@@ -21,15 +19,15 @@
 <div class = "form">
 <div class = "header">
 <h1>sendIT</h1>
-<p>A courier service that helps users deliver parcels to different destinations. SendIT provides courier quotes based on weight categories.
-</P>
+<p>A courier service that helps users deliver parcels to different destinations.</P>
 </div>
-<form action="admin.html" class="login-form">
-<input type="first_name" placeholder="first_name" required/>
-<input type="last_name" placeholder="last_name" required/>
-<input type="email" placeholder="email" required/>
-<input type="password" placeholder="password" required/>
-<button type="submit" class="button">login</button>
+<form action="index.html" class="login-form">
+<input type="text" placeholder="Full_name" required/>
+<input type="email" placeholder="Email" required/>
+<input type="password" placeholder="Password" required/>
+<input type="confirm_password" placeholder="Confirm_password" required/>
+<input type="numbers" placeholder="Phone_number" required/>
+<button type="submit" class="button">SignUp</button>
 <P class = "message">already registered?<a href = "index.html">login</a></p>
 </form>
 </div>
