--- a/UI/index.html
+++ b/UI/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>fAST FOODS</title>
+<title>sendIT</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <meta charset="utf-8"> 
 <META name="keywords" lang="en-us" content="fast FOODS">
@@ -10,9 +10,8 @@
 <body>
 
 <div class="topnav">
-<h1>sIT</h1>
-<a href="contact.html">ContactUs</a>
-<a href="admin/Admin-In.html">Admin</a>
+<h1>SIT</h1>
+<a href="admin/adminIn.html">Admin</a>
 <a class="active" href="#home">Home</a>
 </div>
 
@@ -21,17 +20,16 @@
 <div class = "form">
 <div class = "header">
 <h1>sendIT</h1>
-<p>A courier service that helps users deliver parcels to different destinations. SendIT provides courier quotes based on weight categories.
-</P>
-</div>
-<form action="index.html" class="login-form">
-<input type="email" placeholder="email" required/>
-<input type="password" placeholder="password" required/>
-<button type="submit" class="button">login</button>
-<P class = "message">already registered?<a href = "signup.html">signup</a></p>
-</form>
-</div>
-</div>
+<p>A courier service that helps users deliver parcels to different destinations.</P>
+    </div>
+        <form action="main.html" class="login-form">
+            <input type="email" placeholder="email" required/>
+                <input type="password" placeholder="password" required/>
+                    <button type="submit" class="button">login</button>
+                <P class = "message">Not registered?<a href = "signup.html">signup</a></p>
+            </form>
+        </div>
+    </div>
 </div>
 
 
