[Delivers #161698120] update the orders.html page

--- a/UI/orders.html
+++ b/UI/orders.html
@@ -12,9 +12,9 @@
 <div class="topnav">
     <h1>SIT</h1>
     <a href="index.html">Signout</a>
-    <a href="Profile.html">Profile</a>
+    <a href="profile.html">Profile</a>
     <a class="active" href="#home">Orders</a>
-    <a href="Main.html">Main</a>
+    <a href="main.html">Main</a>
 </div>
 
 <div class="content">
