--- a/UI/admin/adminIn.html
+++ b/UI/admin/adminIn.html
@@ -29,7 +29,7 @@
                             <input type="email" placeholder="email" required/>
                             <input type="password" placeholder="password" required/>
                             <button type="submit" class="button">login</button>
-                            <P class = "message">Not registered?<a href = "adminSignup.html">signup</a></p>
+                            <P class = "message">Not registered?<a href = "adminSignUp.html">signup</a></p>
                             </form>
                             </div>
                             </div>
