[Delivers #161746497] update files .

--- a/UI/admin/transit.html
+++ b/UI/admin/transit.html
@@ -12,7 +12,7 @@
 <div class="topnav">
     <h1>SIT</h1>
     <a href="adminIn.html">Signout</a>
-    <a href="admin_.html">Orders-Confirmed</a>
+    <a href="admin_orders.html">Orders-Confirmed</a>
     <a class="active" href="#home">In-Transit</a>
     <div class="search-container">
         <form action="/action_page.php">
@@ -55,10 +55,6 @@
                 <p>Weight: 5 kg</p> <p> <span class="Time">time: <span class="created_at">22/10/2018-04:30pm</span></p><p> </span>
                 <span class="price">price :<span class="price">85000shs</span></span> </p>
             </div>
-        </div>
-        
-        <div class="Order-button">
-            <a href="place_order.html" class="button">In Transit</a>
         </div>
 
         <div class="Cancel-button">
@@ -103,10 +99,6 @@
                 <span class="price">price :<span class="price">85000shs</span></span> </p>
             </div>
         </div>
-        
-        <div class="Order-button">
-            <a href="place_order.html" class="button">In Transit</a>
-        </div>
 
         <div class="Cancel-button">
             <a href="place_order.html" class="button">Change location</a>
@@ -115,8 +107,6 @@
             <a href="place_order.html" class="button">update status</a>
         </div>
 
-        </div>
-
-
+    </div>
 </html>
 </body>             
