update css and html files

--- a/UI/main.html
+++ b/UI/main.html
@@ -82,10 +82,11 @@
             </div>
 
         </form>
+    </div>    
 <script>
 
 var priceTag = document.getElementById('show_price')
-priceTag.innerHTML = '500 UGX'
+priceTag.innerHTML = '500shs '
 
 var weight_price = document.getElementsByName('weight-price')
 //console.log(weight_price)
